--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="crime_details_label">DETAILS</string>
     <string name="crime_solved_label">Solved</string>
     <string name="date_picker_title">Date of crime:</string>
+    <string name="update_time_label">Change Time</string>
+    <string name="time_picker_title">Time of crime:</string>
 
 </resources>
