--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-
     <string name="crime_title_hint">Enter a title for the crime.</string>
     <string name="crime_title_label">TITLE</string>
     <string name="crime_details_label">DETAILS</string>
@@ -12,5 +11,16 @@
     <string name="date_picker_title">Date of crime:</string>
     <string name="update_time_label">Change Time</string>
     <string name="time_picker_title">Time of crime:</string>
+
+    <string name="no_crime_placeholder_message">There are no crimes!</string>
+
+    <string name="new_crime">New Crime</string>
+    <string name="delete_crime">Delete Crime</string>
+    <string name="show_subtitle">Show Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <plurals name="subtitle_plural">
+        <item quantity="one">%1$s crime</item>
+        <item quantity="other">%1$s crimes</item>
+    </plurals>
 
 </resources>
