--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,24 @@
     <string name="crime_title_label">TITLE</string>
     <string name="crime_details_label">DETAILS</string>
     <string name="crime_solved_label">Solved</string>
+    <string name="crime_suspect_text">Choose Suspect</string>
+    <string name="crime_report_text">Send Crime Report</string>
+    <string name="call_suspect_text">Call Suspect</string>
     <string name="date_picker_title">Date of crime:</string>
     <string name="update_time_label">Change Time</string>
     <string name="time_picker_title">Time of crime:</string>
 
     <string name="no_crime_placeholder_message">There are no crimes!</string>
+
+    <string name="call_suspect_button_label">Call Suspect (%s)</string>
+    <string name="crime_report">%1$s!
+    The crime was discovered on %2$s. %3$s, and %4$s</string>
+    <string name="crime_report_solved">The case is solved</string>
+    <string name="crime_report_unsolved">The case is not solved</string>
+    <string name="crime_report_no_suspect">there is no suspect.</string>
+    <string name="crime_report_suspect">the suspect is %s.</string>
+    <string name="crime_report_subject">CriminalIntent Crime Report</string>
+    <string name="send_report">Send crime report via</string>
 
     <string name="new_crime">New Crime</string>
     <string name="delete_crime">Delete Crime</string>
@@ -22,5 +35,7 @@
         <item quantity="one">%1$s crime</item>
         <item quantity="other">%1$s crimes</item>
     </plurals>
+
+
 
 </resources>
